added buttons with images and changed js
I added the images showing rock paper and scissors, and commented out a bunch of logic so I can just test and also added the call for the choices div.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rock Paper Scissors</title>
+        <script src="./index.js" defer></script>
     </head>
     <body>
-        <script src="./index.js"></script>
+        <h1 class="headerText">Time to Rock, Paper, Scissors Your World!</h1>
+        <div class="choices">
+            <button class="choiceBtn" id="rock">
+                <img class="choiceImg" src="./rock.svg" alt="rock" width="100px" height="auto" />
+            </button>
+            <button class="choiceBtn" id="paper">
+                <img class="choiceImg" src="./paper.svg" alt="paper" width="100px" height="auto" />
+            </button>
+            <button class="choiceBtn" id="scissors">
+                <img class="choiceImg" src="./scissors.svg" alt="scissors" width="100px" height="auto" />
+            </button>
+        </div>
     </body>
 </html>
