Refactored JS code for clicks and added score html
Changed up the code in index.js to make the button clicks functional and also added in the HTML so I can display the scores as they update.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
         <h1 class="headerText">Time to Rock, Paper, Scissors Your World!</h1>
         <div class="choices">
             <button class="choiceBtn" id="rock">
-                <img class="choiceImg" src="./rock.svg" alt="rock" width="100px" height="auto" />
+                <img id="rock" class="choiceImg" src="./rock.svg" alt="rock" width="100px" height="auto" />
             </button>
             <button class="choiceBtn" id="paper">
-                <img class="choiceImg" src="./paper.svg" alt="paper" width="100px" height="auto" />
+                <img id="paper" class="choiceImg" src="./paper.svg" alt="paper" width="100px" height="auto" />
             </button>
             <button class="choiceBtn" id="scissors">
-                <img class="choiceImg" src="./scissors.svg" alt="scissors" width="100px" height="auto" />
+                <img id="scissors" class="choiceImg" src="./scissors.svg" alt="scissors" width="100px" height="auto" />
             </button>
+        </div>
+        <div class="scoreBlock">
+            <div class="score">
+                <h2 class="scoreHead">CPU Score</h2>
+                <p class="scoreNum">0</p>
+            </div>
+            <div class="score">
+                <h2 class="scoreHead">Player Score</h2>
+                <p class="scoreNum">0</p>
+            </div>
         </div>
     </body>
 </html>
