Added some styling and a credits section
Added some styling to the page and a credits section for some styles and images I got from the internet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="./style.css" />
         <script src="./index.js" defer></script>
     </head>
     <body>
@@ -30,4 +31,12 @@
             </div>
         </div>
     </body>
+    <div class="credits">
+        <p class="creditsText">&copy JR Bussard 2024</p>
+        <div class="links">
+            <p>Credit to these websites:</p>
+            <a href="https://fontawesome.com/">FontAwesome for the Rock, Paper, and Scissors SVG's</a>
+            <a href="https://getcssscan.com/css-buttons-examples">CSS Scan / Algolia for the button style</a>
+        </div>
+    </div>
 </html>
