Added in feedback text and removed alerts
Added in text to show whats going on and changed out all the alerts. There are still some comments that I left in and need to remove...Eventually TM

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <div class="scoreBlock">
             <div class="score">
                 <h2 class="scoreHead">CPU Score</h2>
-                <p class="scoreNum">0</p>
+                <p id="cpuScore" class="scoreNum">0</p>
             </div>
             <div class="score">
                 <h2 class="scoreHead">Player Score</h2>
-                <p class="scoreNum">0</p>
+                <p id="playerScore" class="scoreNum">0</p>
             </div>
         </div>
+        <p class="talkBack"></p>
     </body>
     <div class="credits">
         <p class="creditsText">&copy JR Bussard 2024</p>
