made links open new tab and removed comments

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p class="creditsText">&copy JR Bussard 2024</p>
         <div class="links">
             <p>Credit to these websites:</p>
-            <a href="https://fontawesome.com/">FontAwesome for the Rock, Paper, and Scissors SVG's</a>
-            <a href="https://getcssscan.com/css-buttons-examples">CSS Scan / Algolia for the button style</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://fontawesome.com/">FontAwesome for the Rock, Paper, and Scissors SVG's</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://getcssscan.com/css-buttons-examples">CSS Scan / Algolia for the button style</a>
         </div>
     </div>
 </html>
